--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,7 @@
-<h2>Создать</h2>
+
+<div class="col-md-12 p-0  mt-3 mb-3">
+    <div class="h3">Создать</div>
+</div>
 
 <%= render 'form', event: @event %>
 
