--- a/app/views/layouts/_user_navigation.html.erb
+++ b/app/views/layouts/_user_navigation.html.erb
@@ -1,3 +1,6 @@
+<li class="nav-item <%= 'active' if current_page?(cases_path) %>">
+  <a class="nav-link" href="<%= cases_path %>">Заявки</a>
+</li>
 <li class="nav-item <%= 'active' if current_page?(clients_path) %>">
   <a class="nav-link" href="<%= clients_path %>">Клиенты</a>
 </li>
