--- a/lib/templates/erb/scaffold/edit.html.erb
+++ b/lib/templates/erb/scaffold/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %>, page_title: "Editing <%= singular_table_name.titleize %>" %>
+<%%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %>, page_title: "Editing <%= singular_table_name.titleize %>" %>
