--- a/lib/templates/erb/scaffold/new.html.erb
+++ b/lib/templates/erb/scaffold/new.html.erb
@@ -1,4 +1,4 @@
 
-<%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %>, page_title: "New <%= singular_table_name.titleize %>" %>
+<%%= render 'form', <%= singular_table_name %>: @<%= singular_table_name %>, page_title: "New <%= singular_table_name.titleize %>" %>
 
 
