--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -33,10 +33,10 @@
     <tr class="bg-success">
       <th><%= check_box_tag 'selectAll', 'selectAll'%></th>
       <th>#</th>
-      <th>Status</th>
-      <th>Casetype</th>
-      <th>Number</th>
-      <th>Client</th>
+      <th>Статус</th>
+      <th>Тип заявки</th>
+      <th>Номер</th>
+      <th>Клиент</th>
       <th></th>
     </tr>
   </thead>
@@ -47,9 +47,9 @@
         <td><%= check_box_tag "case_ids[]", mycase.id %></td>
         <td><%= mycase.id %></td>
         <td><%= mycase.status %></td>
-        <td><%= mycase.casetype %></td>
+        <td><%= mycase.casetype_value %></td>
         <td><%= mycase.number %></td>
-        <td><%= mycase.client.fio %></td>
+        <td><%= mycase.client.fio if mycase.client %></td>
 
         <td><%= link_to '<span class="oi oi-pencil"></span>'.html_safe, edit_case_path(mycase), class: "px-3" %>
         <%= link_to '<span class="oi oi-trash"></span>'.html_safe, mycase, method: :delete, data: { confirm: 'Are you sure?' } %></td>
