--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,10 +9,10 @@
     <table class="table table-hover table-condensed">
     <thead>
       <tr class="bg-success">
-        <th>Insid</th>
-        <th>Sku</th>
-        <th>Quantity</th>
-        <th>Price</th>
+        <th>Id варианта</th>
+        <th>Артикул</th>
+        <th>Кол-во</th>
+        <th>Цена</th>
       </tr>
     </thead>
 
