--- a/app/views/templates/_liquid_help.html.erb
+++ b/app/views/templates/_liquid_help.html.erb
@@ -47,4 +47,9 @@
 <ul class="list-group list-group-horizontal">
     <li class="list-group-item">{{client.phone}}</li>
 </ul>
-
+<ul class="list-group list-group-horizontal">
+    <li class="list-group-item">{{ client.restocks }}</li>
+</ul>
+<ul class="list-group list-group-horizontal">
+    <li class="list-group-item">{{ client.restocks_for_inform }}</li>
+</ul>
