--- a/app/views/event_actions/_form_items.html.erb
+++ b/app/views/event_actions/_form_items.html.erb
@@ -3,7 +3,9 @@
     <%= f.select :operation, EventAction::OPERATION.map { |r| [r[0], r[1], { value2: r[2]}] }, { include_blank: true}, { class: "form-select" } %>
 <% end %>
 <%= f.association :template, label: 'Шаблон', input_html: { class: "form-select" } , wrapper_html: { class: "mt-1" }  %>
-<%= f.input :pause, label: 'Вкл отложенное выполнение', wrapper_html: { class: "mt-1" }  %>
-<%= f.input :pause_time, as: :integer, label: 'Отложить выполнение (в минутах)', input_html: { class: "mt-1" }  %>
-<%= f.input :timetable, as: :hidden, input_html: { class: "mt-1" }  %>
-<%= f.input :timetable_time, as: :hidden, wrapper_html: { class: "mt-1" }  %>
+<%= f.input :pause, label: 'Вкл отложенное выполнение', wrapper_html: { class: "mt-2" }  %>
+<%= f.input :pause_time, as: :integer, label: 'Отложить выполнение (в минутах)', input_html: { class: "mt-2" }  %>
+<%= f.input :timetable, label: 'Вкл периодическое выполнение', wrapper_html: { class: "#{class_display} mt-2" }  %>
+<%= f.input :timetable_time, label: "Проверять каждые (в часах)", wrapper_html: { class: "#{class_display} mt-2" } do %>
+    <%= f.select :timetable_time, Array.new(25){|e| [e, e*60]}.drop(1), { include_blank: true}, { class: "form-select" } %>
+<% end %>
