--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -6,15 +6,21 @@
   <div class="row">
     <div class="col-6">
       <%= f.input :casetype, label: "Тип заявки", collection: Case::CASETYPE, prompt: "Тип заявки", input_html: { class: "form-select", onchange: "check_type(this)"} %>
+      <% class_display = @event.casetype == 'order' ||  @event.casetype == 'restock' ? '' : 'd-none'%>
       <% if Insint.present_work? %>
-      <%= f.input :custom_status, label: "Статус заказа", collection: Services::InsalesApi.new(Insint.current).statuses, prompt: "Статус", input_html: { class: "form-select" }, wrapper_html: { class: "d-none" } %>
+      <%= f.input :custom_status, label: "Статус заказа", collection: Services::InsalesApi.new(Insint.current).statuses, prompt: "Статус", 
+                                  input_html: { class: "form-select" }, wrapper_html: { class: class_display } %>
       <% else %>
-      <%= f.input :custom_status, label: "Статус заказа", placeholder: "Статус",disabled: true, input_html: { class: "form-control" }, wrapper_html: { class: "d-none" }, hint: 'Не настроена интеграция Insales' %>
+      <%= f.input :custom_status, label: "Статус заказа", placeholder: "Статус",disabled: true, 
+                                  input_html: { class: "form-control" }, wrapper_html: { class: class_display }, hint: 'Не настроена интеграция Insales' %>
       <% end %>
-      <%= f.input :financial_status, label: "Фин Статус заказа", collection: Event::FIN_STATUS, prompt: "Фин Статус", input_html: { class: "form-select" }, wrapper_html: { class: "d-none" } %>
+      <%= f.input :financial_status,  label: "Фин Статус заказа", collection: Event::FIN_STATUS, prompt: "Фин Статус", 
+                                      input_html: { class: "form-select" }, wrapper_html: { class: class_display } %>
+      
       <%= f.fields_for :event_actions do |ff| %>
-        <%= render "event_actions/form_items", f: ff %>
+        <%= render "event_actions/form_items", {f: ff, class_display: class_display} %>
       <% end %>
+    
     </div>
   </div>
   <div class="row">
