--- a/app/views/message_setups/_form.html.erb
+++ b/app/views/message_setups/_form.html.erb
@@ -4,37 +4,54 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="row mt-3">
-    <div class="col-12 h4"><%= page_title %></div>
-    <div class="col-12 h6">Cервис: <%= MessageSetup::TITLE %></div>
-    <div class="col-12 h6">Описание: <%= MessageSetup::DESCRIPTION %></div>
-    <div class="col-9">
-    <% if Insint.present_work? %>
-      <%= f.input :status, label: "Статус (вкл/выкл)", wrapper: :horizontal_collection, wrapper_html: {class: 'mt-4'}  %>
-      <%= f.input :title, as: :hidden, input_html: { value: MessageSetup::TITLE } %>
-      <%= f.input :handle, as: :hidden, input_html: { value: MessageSetup::HANDLE }  %>
-      <%= f.input :description, as: :hidden, input_html: { value: MessageSetup::DESCRIPTION }  %>
-      <%= f.input :valid_until, as: :hidden, input_html: { value: nil }  %>
-    <% else %>
-    Внимание!!! Интеграция не настроена. Настройте <%= link_to "интеграцию", useraccounts_path %>
-    <% end %>
-      <% disabled = @message_setup.payplan && @message_setup.payplan.handle.include?("free") ? false : true %>
-      <% checked = @message_setup.payplan ? @message_setup.payplan.id : Payplan.message_free_id %>
-      <%= f.association :payplan, collection: Payplan.where(service_handle: "message").order(:id), 
-                                  as: :radio_buttons,
-                                  label: 'Тарифы:',
-                                  label_method: lambda { |plan| "#{plan.title} Период продления #{plan.period} месяц. Стоимость -  #{plan.price} руб".html_safe },
-                                  value_method: :id, 
-                                  disabled: disabled == true ? 'disabled' : '', 
-                                  checked: checked,
-                                  wrapper: :horizontal_collection,
-                                  wrapper_html: {class: 'mt-4'} %>
+    <div class="col-12 h4 mt-2"><%= page_title %></div>
+    <div class="col-12 h6 mt-3">Cервис: <%= MessageSetup::TITLE %></div>
+    <div class="col-9 h6">Описание: <%= MessageSetup::DESCRIPTION %></div>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs mt-3" id="msTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="ms-main-tab" data-bs-toggle="tab" data-bs-target="#ms-main" type="button" role="tab" aria-controls="ms-main" aria-selected="true">Основные настройки</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="abandoned-cart-tab" data-bs-toggle="tab" data-bs-target="#abandoned-cart" type="button" role="tab" aria-controls="abandoned-cart" aria-selected="false">Брошенная корзина</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="restock-tab" data-bs-toggle="tab" data-bs-target="#restock" type="button" role="tab" aria-controls="restock" aria-selected="false">Сообщить о поступлении</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="order-tab" data-bs-toggle="tab" data-bs-target="#order" type="button" role="tab" aria-controls="order" aria-selected="false">Заказ</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="preorder-tab" data-bs-toggle="tab" data-bs-target="#preorder" type="button" role="tab" aria-controls="preorder" aria-selected="false">Предзаказ</button>
+      </li>
+    </ul>
+    
+    <!-- Tab panes -->
+    <div class="tab-content pt-3">
+      <div class="tab-pane active" id="ms-main" role="tabpanel" aria-labelledby="ms-main-tab">
+        <%= render 'main_tab', f: f %>
+      </div>
+      <div class="tab-pane" id="abandoned-cart" role="tabpanel" aria-labelledby="abandoned-cart-tab">
+        <%= render 'abandoned_tab', f: f %>
+      </div>
+      <div class="tab-pane" id="restock" role="tabpanel" aria-labelledby="restock-tab">
+        <%= render 'restock_tab', f: f%>
+      </div>
+      <div class="tab-pane" id="order" role="tabpanel" aria-labelledby="order-tab">
+        <%= render 'order_tab', f: f%>
+      </div>
+      <div class="tab-pane" id="preorder" role="tabpanel" aria-labelledby="preorder-tab">
+        <%= render 'preorder_tab', f: f%>
+      </div>
+    </div>
+
   </div>
 
-</div>
+
   <div class="row">
-  <div class="col-2 btn-group mt-5">
-    <%= f.button :submit, "Сохранить", class: 'btn btn-success' %>
-    <%= link_to 'Назад', :back, class: 'btn btn-outline-primary' %>
-  </div>
+    <div class="col-2 btn-group mt-5">
+      <%= f.button :submit, "Сохранить", class: 'btn btn-success' %>
+      <%= link_to 'Назад', :back, class: 'btn btn-outline-primary' %>
+    </div>
   </div>
 <% end %>
