--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -39,10 +39,15 @@
           <%= form.select :case_id, Case.all.limit(10).pluck(:id), include_blank: "Выберите заявку", class: "form-select" %>
           <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %>Предпросмотр<% end %>
         <% end %>
+        <%= form_with url: preview_restock_templates_path, method: :get, class: "input-group", local: false do |form| %>
+          <%= form.select :client_id, Client.order(:id).limit(10).pluck(:id), include_blank: "Выберите клиента", class: "form-select" %>
+          <%= button_tag(type: 'submit', class: "btn btn-outline-secondary") do %>Предпросмотр<% end %>
+        <% end %>
 
         <div class="mt-3">
           <div id="order-preview"></div>
           <div id="case-preview"></div>
+          <div id="restock-preview"></div>
         </div>
       <% else %>
       Сохраните шаблон и появится Предпросмотр
