update insint add favorite

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -32,7 +32,9 @@
       <% if Favorite.all.count > 0 %>
       <th>Избранное</th>
       <% end %>
+      <% if Restock.all.count > 0 %>
       <th>Сообщить <br>о поступлении</th>
+       <% end %>
       <th colspan="1"></th>
     </tr>
   </thead>
