--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -17,6 +17,7 @@
 <td><%= user.products_count %></td>
 <td><%= user.izb_count %></td>
 <td><%= user.favorite_setup_status %></td>
-<td><%= user.restock_setup_status %></td>
-<td><%= user.message_setup_status %></td>
+<td><%= user.message_setup_status %><br>
+    <%= user.message_setup_valid_until %>
+</td>
 <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, user, method: :delete, data: { confirm: 'Are you sure?' }  if current_admin %></td>
