--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,8 +34,7 @@
         <th>Products</th>
         <th>Favorites</th>
         <th>Избранное</th>
-        <th>Restock</th>
-        <th>Messages</th>
+        <th colspan="2">Триггеры</th>
       </tr>
     </thead>
     <tbody class="align-middle">
@@ -49,5 +48,5 @@
 </div>
 
 <div class="apple_pagination">
-<%= will_paginate @users %>
+  <%= will_paginate @users %>
 </div>
