--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -35,7 +35,7 @@
     <p><strong>Сумма счета:</strong><%= @invoice.sum %></p>
     <p><strong>Статус счета:</strong><%= @invoice.status %></p>
     <% if @invoice.status == "Не оплачен" %>
-    <a href="https://paymaster.ru/ru-RU/Payment/Init?LMI_MERCHANT_ID=52d455b2-cf83-49eb-9096-d5590cac2a7c&LMI_CURRENCY=RUB&LMI_PAYMENT_AMOUNT=<%=@invoice.sum%>&LMI_PAYMENT_DESC=<%=@invoice.payplan.period%>&LMI_PAYMENT_NO=<%=@invoice.id%>&CURRENT_USER=<%=current_user.id%>&LMI_OPEN_INVOICE=0&LMI_SIM_MODE=0" class="btn btn-primary stretched-link">Перейти к оплате</a>
+    <a href="https://paymaster.ru/ru-RU/Payment/Init?LMI_MERCHANT_ID=52d455b2-cf83-49eb-9096-d5590cac2a7c&LMI_CURRENCY=RUB&LMI_PAYMENT_AMOUNT=<%=@invoice.sum%>&LMI_PAYMENT_DESC=<%=@invoice.payplan.title%>&LMI_PAYMENT_NO=<%=@invoice.id%>&CURRENT_USER=<%=current_user.id%>&LMI_OPEN_INVOICE=0&LMI_SIM_MODE=0" class="btn btn-primary stretched-link">Перейти к оплате</a>
     <% end %>
   </div>
 </div>
