--- a/app/views/home/preoder.html.erb
+++ b/app/views/home/preoder.html.erb
@@ -2,10 +2,10 @@
 <%= render partial: "/home/header"%>
 </div>
 <div class="container mb-5">
-<h1 class="display-4 text-center text-uppercase mt-5 mb-5">Сервис Предзаказ</h1>
+<h1 class="display-4 text-center text-uppercase mt-5 mb-5">Триггеры -  Предзаказ</h1>
 <section class="page-section pt-0">
 <div class="row">
-    <div class="display-6 text-center text-uppercase mb-5">Основные возможности</div>
+    <div class="display-6 text-center text-uppercase mb-5">Возможности</div>
     <ol class="list-group list-group-numbered">
   <li class="list-group-item">собираем заявки клиентов с формы предзаказа товара с учетом его варианта</li>
   <li class="list-group-item">создание заказа из заявки с комментарием в заказе</li>
@@ -37,7 +37,7 @@
             <div class="card text-center ml-0 mr-0">
             <div class="card-header text-white bg-success">Стандарт</div>
                 <div class="card-body">
-                <h4 class="card-title">400 ₽/мес</h4>
+                <h4 class="card-title">1000 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">консультации</li>
                     <li class="list-group-item">оплата за 1 мес</li>
@@ -54,9 +54,9 @@
             <div class="card text-center ml-0 mr-0">
             <div class="card-header">Стандарт 6</div>
                 <div class="card-body">
-                <h4 class="card-title">360 ₽/мес</h4>
+                <h4 class="card-title">900 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">скидка 10% (2160 ₽)</li>
+                    <li class="list-group-item">скидка 10% (5400 ₽)</li>
                     <li class="list-group-item">оплата за 6 мес</li>
                     <li class="list-group-item">полный функционал</li>
                 </ul>
@@ -71,9 +71,9 @@
             <div class="card text-center ml-0 mr-0">
             <div class="card-header text-white bg-danger">Стандарт 12</div>
                 <div class="card-body">
-                <h4 class="card-title">320 ₽/мес</h4>
+                <h4 class="card-title">800 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">скидка 20% (3840 ₽)</li>
+                    <li class="list-group-item">скидка 20% (9600 ₽)</li>
                     <li class="list-group-item">оплата за 12 мес</li>
                     <li class="list-group-item">полный функционал</li>
                 </ul>
