--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,6 +25,7 @@
         <th rowspan="2">ID</th>
         <th rowspan="2">Пользователь</th>
         <th rowspan="2">Даты</th>
+        <th rowspan="2">Настройки</th>
         <th colspan="3">Всего</th>
         <th colspan="3">Сервисы состояние</th>
         <th colspan="1" rowspan="2"></th>
