--- a/app/views/templates/_liquid_help.html.erb
+++ b/app/views/templates/_liquid_help.html.erb
@@ -53,3 +53,15 @@
 <ul class="list-group list-group-horizontal">
     <li class="list-group-item">{{ client.restocks_for_inform }}</li>
 </ul>
+<span class="">Пользователь</span>
+<ul class="list-group list-group-horizontal">
+    <li class="list-group-item">{{user.name}}</li>
+    <li class="list-group-item">{{user.email}}</li>
+</ul>
+<ul class="list-group list-group-horizontal">
+    <li class="list-group-item">{{user.phone}}</li>
+</ul>
+<ul class="list-group list-group-horizontal">
+    <li class="list-group-item">{{ user.logo }}</li>
+</ul>
+
