--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,15 +11,15 @@
   </div>
   <div class="col-6">
     <div class="col-12 mt-3 mb-3 h3">Картинка</div>
-    <%= f.input :avatar, as: :file, label: false, direct_upload: true%>
+    <%= f.input :image, as: :file, label: false, direct_upload: true %>
     <div class="image-table row justify-content-between mt-3">
-      <% if @user.avatar.attached?%>
+      <% if @user.image.attached?%>
       <div class="col-6 row align-items-center mt-1 image-item">
-        <div class="col-9" data-image="<%= @user.avatar.metadata %>">
-          <%= image_tag @user.avatar_thumbnail %>
+        <div class="col-9" data-image="<%= @user.image.metadata %>" data-image-url="<%= @user.image_data[:url]%>">
+          <%= image_tag @user.image_thumb %>
         </div>
         <div class="col-3">
-          <%= link_to "Delete", delete_image_users_path(@user.id, @user.avatar.id), method: :delete, class: "btn btn-success delete-image", data: {confirm: "Are you sure?"}, remote: true if @user.avatar.attached? %>
+          <%= link_to "Delete", delete_image_users_path(@user.id, @user.image.id), method: :delete, class: "btn btn-success delete-image", data: {confirm: "Are you sure?"}, remote: true if @user.image.attached? %>
         </div>
       </div>
       <% end %>
