--- a/app/views/message_setups/_restock_tab.html.erb
+++ b/app/views/message_setups/_restock_tab.html.erb
@@ -1,4 +1,1 @@
-<div class="col-8">
-    <% placeholder = f.object.restock_xml.present? ? '' : 'появится автоматически после сохранения сервиса' %>
-    <%= f.input :restock_xml, disabled: true, label: 'Ссылка на файл с товарами', placeholder: placeholder, input_html: { class: "mt-1" }  %>
-</div>
+restock
