--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,2 +1,2 @@
-<%= render 'form', favorite_setup: @invoice, page_title: "Создать"  %>
+<%= render 'form', invoice: @invoice, page_title: "Создать"  %>
 
