update message setup

--- a/app/views/dashboard/services.html.erb
+++ b/app/views/dashboard/services.html.erb
@@ -9,7 +9,7 @@
             <th>Состояние</th>
             <th>Настройка</th>
             <th>Тариф</th>
-            <th>Работа</th>
+            <th>Действует</th>
             <th></th>
           </tr>
         </thead>
