--- a/app/views/message_setups/_preorder_tab.html.erb
+++ b/app/views/message_setups/_preorder_tab.html.erb
@@ -1,1 +1,3 @@
-preorder
+<p>preorder</p>
+<p>перед созданием заказа со статусом Предзаказ проверяется кол-во у товара и если кол-во равно 0 то добавляется кол-во 1 и только тогда можно создать заказ</p>
+<p>в инсалес должен быть создан кастомный статус в группе Отменён ('declined') с названием - 'preorder'</p>
