--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
   <table class="table table-sm table-hover align-middle table-bordered border-light">
     <thead class="align-middle">
       <tr class="bg-success">
-        <th rowspan="2">ID</th>
+        <th rowspan="2">#</th>
         <th rowspan="2">Пользователь</th>
         <th rowspan="2">Даты</th>
         <th rowspan="2">Настройки</th>
